tests/incremental_json/incremental_json.exp

Initial status:
Error: test.js:4
  4: var data = require('./data');
                        ^^^^^^^^ ./data. Required module not found


Found 1 error

Create data.json:
No errors!

Modify data.json:
Error: test.js:5
  5: var x: number = data.x;
                     ^^^^^^ Cannot assign `data.x` to `x` because string [1] is incompatible with number [2].
  References:
    2:   x: "",
            ^^ [1]: string. See: data.json:2
    5: var x: number = data.x;
              ^^^^^^ [2]: number


Found 1 error

Delete data.json:
Error: test.js:4
  4: var data = require('./data');
                        ^^^^^^^^ ./data. Required module not found


Found 1 error

Done!
